--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
    <application
-        android:label="apex_task"
+        android:label="SmartPay"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
