--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter_svg: ^1.1.6
   get_storage: ^2.0.3
   provider: ^6.0.5
-  google_fonts: ^3.0.1
   get_it: ^7.2.0
   fl_country_code_picker: ^0.0.4
   http: ^0.13.5
@@ -42,7 +41,7 @@ dependencies:
   the_validator: ^2.0.0
   otp_pin_field: ^1.1.2
   custom_timer: ^0.1.2
-  elegant_notification: ^1.6.4
+  cherry_toast: ^1.0.9
   flutter:
     sdk: flutter
 
@@ -76,7 +75,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - image/
+    - asset/image/
+    - asset/font/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -90,17 +90,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: SFPRO
+      fonts:
+        - asset: asset/font/SFPRODISPLAYBOLD.OTF
+          weight: 900
+        - asset: asset/font/SFPRODISPLAYBOLD.OTF
+          weight: 900
+        - asset: asset/font/SFPRODISPLAYBOLD.OTF
+          weight: 700
+        - asset: asset/font/SFPRODISPLAYREGULAR.OTF
+          weight: 400
+        - asset: asset/font/SFPRODISPLAYSEMIBOLDITALIC.OTF
+          weight: 600
+        - asset: asset/font/SFPRODISPLAYBOLD.OTF
+          weight: 800
