--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   custom_timer: ^0.1.2
   cherry_toast: ^1.0.9
   go_router: ^6.0.1
+  flutter_dotenv: ^5.0.2
   flutter:
     sdk: flutter
 
@@ -80,6 +81,7 @@ flutter:
   assets:
     - asset/image/
     - asset/font/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
